🐛 (lib): Fix exports

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "zustand-hash-storage",
   "module": "src/index.ts",
   "type": "module",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "author": {
     "name": "Martin Petr",
     "email": "martinpetrnp@gmail.com"
@@ -13,13 +15,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "prepack": "rm -rf dist && bun build --minify --no-source-maps --outdir dist src/index.ts"
-  },
-  "exports": {
-    ".": {
-      "import": "./src/index.ts",
-      "require": "./dist/index.js"
-    }
+    "prepack": "rm -rf dist && bun build --minify --no-source-maps --outdir dist src/index.ts && tsc"
   },
   "devDependencies": {
     "@types/bun": "latest"
