--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,16 +12,18 @@
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
-    "noEmit": true,
+    "noEmit": false,
 
     // Best practices
     "strict": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
 
-    // Some stricter flags (disabled by default)
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
+    "emitDeclarationOnly": true,
+    "declaration": true,
+
+    "outDir": "dist",
+
+    "baseUrl": "./src/"
   }
 }
